--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
 	</head>
 	<body ng-app="MadLibsApp">
 	<body>
-		<div class="container" ng-controller="MainCtrl">
-			<div class="row"><h2>{{title}}</h2></div>
+		<div class="container-fluid" ng-controller="MainCtrl">
 			<div class="row">
-				<div class="madLibContainer">
+				<h2 class="col-md-12">{{title}}</h2>
+			</div>
+			<div class="row">
+				<div class="madLibContainer col-xs-5">
 					<div id="madLib" ng-model="madLibsContent" contenteditable></div>
 				</div>
-				<div class="madLibOutputContainer">
+				<div class="madLibOutputContainer col-xs-5">
 					<div class="" id="madLibOutput" ng-bind="madLibsContent"></div>
 				</div>
 			</div>
-
-			
-
 		</div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
 		<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
